test/Dialect/Struct/structs_fail.llzk
// RUN: llzk-opt -split-input-file -verify-diagnostics %s

module attributes {llzk.lang} {
  poly.template @TComponentD {
    poly.param @B
    poly.param @D
    poly.param @C

    struct.def @ComponentD {
      // expected-error@+1 {{'struct.def' op expects parent op to be one of 'builtin.module, poly.template'}}
      struct.def @ComponentA {}
    }
  }
}
// -----
module attributes {llzk.lang} {
  function.def @identity(%x: !felt.type) -> !felt.type {
    // expected-error@+1 {{'struct.def' op expects parent op to be one of 'builtin.module, poly.template'}}
    struct.def @ComponentA {}
    function.return %x: !felt.type
  }
}
// -----
module attributes {llzk.lang} {
  poly.template @TComponentB {
    poly.param @B
    poly.param @D
    poly.param @C

    struct.def @ComponentB {
      // expected-error@+1 {{'struct.def' op must define either only a non-derived "@product" function, or both non-derived "@compute" and "@constrain" functions; found "@invalidname"}}
      function.def @invalidname(%a: !felt.type, %b: !felt.type) {
        function.return
      }
    }
  }
}
// -----
module attributes {llzk.lang} {
  poly.template @TComponentE {
    poly.param @B
    poly.param @D
    poly.param @C

    struct.def @ComponentE {
      // expected-note@+1 {{see existing symbol definition here}}
      function.def @compute(%a: !felt.type, %b: !felt.type) -> !struct.type<@TComponentE::@ComponentE<[@B, @D, @C]>> {
        %self = struct.new : !struct.type<@TComponentE::@ComponentE<[@B, @D, @C]>>
        function.return %self : !struct.type<@TComponentE::@ComponentE<[@B, @D, @C]>>
      }
      // expected-error@+1 {{redefinition of symbol named 'compute'}}
      function.def @compute() -> !struct.type<@TComponentE::@ComponentE<[@B, @D, @C]>> {
        %self = struct.new : !struct.type<@TComponentE::@ComponentE<[@B, @D, @C]>>
        function.return %self : !struct.type<@TComponentE::@ComponentE<[@B, @D, @C]>>
      }
    }
  }
}
// -----
module attributes {llzk.lang} {
  poly.template @TComponentF0 {
    poly.param @B
    poly.param @D
    poly.param @C

    // expected-error@+1 {{'struct.def' op must define either only a non-derived "@product" function, or both non-derived "@compute" and "@constrain" functions; found "@constrain", missing "@compute"}}
    struct.def @ComponentF0 {
      function.def @constrain(%self: !struct.type<@TComponentF0::@ComponentF0<[@B, @D, @C]>>, %a: !felt.type, %b: !felt.type) {
        function.return
      }
    }
  }
}
// -----
module attributes {llzk.lang} {
  poly.template @TComponentF1 {
    poly.param @B
    poly.param @D
    poly.param @C

    // expected-error@+1 {{'struct.def' op must define either only a non-derived "@product" function, or both non-derived "@compute" and "@constrain" functions; found "@compute", missing "@constrain"}}
    struct.def @ComponentF1 {
      function.def @compute(%a: !felt.type, %b: !felt.type) -> !struct.type<@TComponentF1::@ComponentF1<[@B, @D, @C]>> {
        %self = struct.new : !struct.type<@TComponentF1::@ComponentF1<[@B, @D, @C]>>
        function.return %self : !struct.type<@TComponentF1::@ComponentF1<[@B, @D, @C]>>
      }
    }
  }
}
// -----
module attributes {llzk.lang} {
  poly.template @TComponentF2 {
    poly.param @B
    poly.param @D
    poly.param @C

    // expected-error@+1 {{'struct.def' op must define either only a non-derived "@product" function, or both non-derived "@compute" and "@constrain" functions; found "@compute", missing "@constrain"}}
    struct.def @ComponentF2 {
      function.def @compute(%a: !felt.type, %b: !felt.type) -> !struct.type<@TComponentF2::@ComponentF2<[@B, @D, @C]>> {
        %self = struct.new : !struct.type<@TComponentF2::@ComponentF2<[@B, @D, @C]>>
        function.return %self : !struct.type<@TComponentF2::@ComponentF2<[@B, @D, @C]>>
      }
      function.def @product(%a: !felt.type, %b: !felt.type) -> !struct.type<@TComponentF2::@ComponentF2<[@B, @D, @C]>> {
        %self = struct.new : !struct.type<@TComponentF2::@ComponentF2<[@B, @D, @C]>>
        function.return %self : !struct.type<@TComponentF2::@ComponentF2<[@B, @D, @C]>>
      }
    }
  }
}
// -----
module attributes {llzk.lang} {
  poly.template @TComponentF3 {
    poly.param @B
    poly.param @D
    poly.param @C

    // expected-error@+1 {{'struct.def' op must define either only a non-derived "@product" function, or both non-derived "@compute" and "@constrain" functions; could not find "@product", "@compute", or "@constrain"}}
    struct.def @ComponentF3 {
    }
  }
}
// -----
module attributes {llzk.lang} {
  // expected-error@+1 {{'struct.def' op must define either only a non-derived "@product" function, or both non-derived "@compute" and "@constrain" functions; could not find non-derived "@product", "@compute", or "@constrain"}}
  struct.def @ComponentF4 {
    // expected-note@+1 {{derived "@compute" here}}
    function.def @compute() -> !struct.type<@ComponentF4> attributes {llzk.derived} {
      %self = struct.new : <@ComponentF4>
      function.return %self : !struct.type<@ComponentF4>
    }
    // expected-note@+1 {{derived "@constrain" here}}
    function.def @constrain(%self: !struct.type<@ComponentF4>) attributes {llzk.derived} {
      function.return
    }
  }
}
// -----
module attributes {llzk.lang} {
  // expected-error@+1 {{'struct.def' op must define either only a non-derived "@product" function, or both non-derived "@compute" and "@constrain" functions; "@compute" and "@constrain" must both be either derived or non-derived}}
  struct.def @ComponentF5 {
    // expected-note@+1 {{derived "@compute" here}}
    function.def @compute() -> !struct.type<@ComponentF5> attributes {llzk.derived} {
      %self = struct.new : <@ComponentF5>
      function.return %self : !struct.type<@ComponentF5>
    }
    function.def @constrain(%self: !struct.type<@ComponentF5>) {
      function.return
    }
  }
}
// -----
module attributes {llzk.lang} {
  poly.template @TComponentG {
    poly.param @B
    poly.param @D
    poly.param @C

    struct.def @ComponentG {
      function.def @compute() -> !struct.type<@TComponentG::@ComponentG<[@B, @D, @C]>> {
        %self = struct.new : !struct.type<@TComponentG::@ComponentG<[@B, @D, @C]>>
        function.return %self : !struct.type<@TComponentG::@ComponentG<[@B, @D, @C]>>
      }
      // expected-error@+1 {{'builtin.module' op invalid operation in 'struct.def'; only 'struct.member' and 'function.def' operations are permitted}}
      builtin.module {
      }
    }
  }
}
// -----
module attributes {llzk.lang} {
  struct.def @ComponentH {
    struct.member @f2 : !felt.type // expected-note {{see existing symbol definition here}}
    // expected-error@+1 {{redefinition of symbol named 'f2'}}
    struct.member @f2 : !felt.type

    function.def @compute() -> !struct.type<@ComponentH> {
      %self = struct.new : !struct.type<@ComponentH>
      function.return %self : !struct.type<@ComponentH>
    }
    function.def @constrain(%self: !struct.type<@ComponentH>)  { function.return }
  }
}
// -----
module attributes {llzk.lang} {
  struct.def @ComponentJ {
    function.def @compute() -> !struct.type<@ComponentJ> {
      %self = struct.new : !struct.type<@ComponentJ>
      function.return %self : !struct.type<@ComponentJ>
    }
    function.def @constrain(%self: !struct.type<@ComponentJ>)  { function.return }
  }

  function.def @user() {
    // expected-error@+2 {{symbol "@ComponentJ" references a 'struct.def' but expected a 'function.def'}}
    // expected-error@+1 {{expected 'function.def' named "@ComponentJ"}}
    function.call @ComponentJ() : () -> ()
    function.return
  }
}
// -----
module attributes {llzk.lang} {
  struct.def @ComponentK {
    // expected-error@+2 {{'struct.member' op references unknown symbol "@Missing"}}
    // expected-error@+1 {{could not find 'struct.def' named "@Missing"}}
    struct.member @f : !struct.type<@Missing>

    function.def @compute() -> !struct.type<@ComponentK> {
      %self = struct.new : !struct.type<@ComponentK>
      function.return %self : !struct.type<@ComponentK>
    }
    function.def @constrain(%self: !struct.type<@ComponentK>)  { function.return }
  }
}
// -----
module attributes {llzk.lang} {
  struct.def @ComponentL {
    // expected-error@+2 {{'struct.member' op references unknown symbol "@Missing"}}
    // expected-error@+1 {{could not find 'struct.def' named "@Missing"}}
    struct.member @f : !array.type<2,3,2 x !struct.type<@Missing>>

    function.def @compute() -> !struct.type<@ComponentL> {
      %self = struct.new : !struct.type<@ComponentL>
      function.return %self : !struct.type<@ComponentL>
    }
    function.def @constrain(%self: !struct.type<@ComponentL>)  { function.return }
  }
}
// -----
module attributes {llzk.lang} {
  module @path{}
  struct.def @ComponentM {
    // expected-error@+2 {{'struct.member' op references unknown symbol "@path::@to::@Missing"}}
    // expected-error@+1 {{could not find 'struct.def' named "@path::@to::@Missing"}}
    struct.member @f : !array.type<2,3,2 x !struct.type<@path::@to::@Missing>>

    function.def @compute() -> !struct.type<@ComponentM> {
      %self = struct.new : !struct.type<@ComponentM>
      function.return %self : !struct.type<@ComponentM>
    }
    function.def @constrain(%self: !struct.type<@ComponentM>)  { function.return }
  }
}

// -----
module attributes {llzk.lang} {
  struct.def @ComponentP {
    // expected-error@+2 {{'function.def' op references unknown symbol "@X"}}
    // expected-error@+1 {{could not find 'struct.def' named "@X"}}
    function.def @compute(%0: i1, %1: i1, %2: i1, %3: i1, %4: i1, %5: i1, %6: i1, %7: !struct.type<@X>) -> !struct.type<@ComponentP> {
      %self = struct.new : !struct.type<@ComponentP>
      function.return %self : !struct.type<@ComponentP>
    }
    function.def @constrain(%self: !struct.type<@ComponentP>)  { function.return }
  }
}
// -----
module attributes {llzk.lang} {
  struct.def @ComponentQ {
    function.def @compute() -> !struct.type<@ComponentQ> {
      %self = struct.new : !struct.type<@ComponentQ>
      function.return %self : !struct.type<@ComponentQ>
    }
    // expected-error@+2 {{'function.def' op references unknown symbol "@X"}}
    // expected-error@+1 {{could not find 'struct.def' named "@X"}}
    function.def @constrain(%self: !struct.type<@ComponentQ>, %0: i1, %1: i1, %2: i1, %3: i1, %4: i1, %5: i1, %6: i1, %7: !struct.type<@X>)  { function.return }
  }
}
// -----
module attributes {llzk.lang} {
  struct.def @ComponentR {
    // expected-error@+4 {{'function.def' op references unknown symbol "@A"}}
    // expected-error@+3 {{could not find 'struct.def' named "@A"}}
    // expected-error@+2 {{'function.def' op references unknown symbol "@B"}}
    // expected-error@+1 {{could not find 'struct.def' named "@B"}}
    function.def @compute(%1: !struct.type<@A>, %7: !struct.type<@B>) -> !struct.type<@ComponentR> {
      %self = struct.new : !struct.type<@ComponentR>
      function.return %self : !struct.type<@ComponentR>
    }
    function.def @constrain(%self: !struct.type<@ComponentR>, %1: !struct.type<@A>, %7: !struct.type<@B>)  { function.return }
  }
}
// -----
module attributes {llzk.lang} {
  struct.def @ComponentS {
    // expected-error@+4 {{'function.def' op references unknown symbol "@A"}}
    // expected-error@+3 {{could not find 'struct.def' named "@A"}}
    // expected-error@+2 {{'function.def' op references unknown symbol "@B"}}
    // expected-error@+1 {{could not find 'struct.def' named "@B"}}
    function.def @constrain(%self: !struct.type<@ComponentS>, %1: !struct.type<@A>, %7: !struct.type<@B>)  { function.return }
    function.def @compute(%1: !struct.type<@A>, %7: !struct.type<@B>) -> !struct.type<@ComponentS> {
      %self = struct.new : !struct.type<@ComponentS>
      function.return %self : !struct.type<@ComponentS>
    }
  }
}
// -----
module attributes {llzk.lang} {
  struct.def @ComponentT { // expected-note {{references parent component defined here}}
    // expected-error@+1 {{'struct.member' op type is circular}}
    struct.member @f : !struct.type<@ComponentT>

    function.def @compute() -> !struct.type<@ComponentT> {
      %self = struct.new : !struct.type<@ComponentT>
      function.return %self : !struct.type<@ComponentT>
    }
    function.def @constrain(%self: !struct.type<@ComponentT>)  { function.return }
  }
}
// -----
module attributes {llzk.lang} {
  module @a {
    struct.def @ComponentV { // expected-note {{references parent component defined here}}
      // expected-error@+1 {{'struct.member' op type is circular}}
      struct.member @f : !struct.type<@a::@ComponentV>

      function.def @compute() -> !struct.type<@a::@ComponentV> {
        %self = struct.new : !struct.type<@a::@ComponentV>
        function.return %self : !struct.type<@a::@ComponentV>
      }
      function.def @constrain(%self: !struct.type<@a::@ComponentV>)  { function.return }
    }
  }
}
// -----
module attributes {llzk.lang} {
  // expected-error@+1 {{'struct.new' op only valid within a 'function.def' with 'function.allow_witness' attribute}}
  %0 = struct.new : !struct.type<@SomeComponent>
}
// -----
module attributes {llzk.lang} {
  struct.def @ComponentW {
    // expected-error@+1 {{'struct.new' op only valid within a 'function.def' with 'function.allow_witness' attribute}}
    struct.new : !struct.type<@ComponentW>

    function.def @compute() -> !struct.type<@ComponentW> {
      %self = struct.new : !struct.type<@ComponentW>
      function.return %self : !struct.type<@ComponentW>
    }
    function.def @constrain(%self: !struct.type<@ComponentW>)  { function.return }
  }
}
// -----
module attributes {llzk.lang} {
  struct.def @WrongComponent { // expected-note {{uses this type instead}}
    function.def @compute() -> !struct.type<@WrongComponent> {
      %self = struct.new : !struct.type<@WrongComponent>
      function.return %self : !struct.type<@WrongComponent>
    }
    function.def @constrain(%self: !struct.type<@WrongComponent>)  { function.return }
  }

  struct.def @ComponentX {
    function.def @compute() -> !struct.type<@ComponentX> {
      %self = struct.new : !struct.type<@ComponentX>
      // expected-error@+1 {{'struct.new' op must use type of its ancestor 'struct.def' "@ComponentX<[]>" as result type}}
      %invalid = struct.new : !struct.type<@WrongComponent>
      function.return %self : !struct.type<@ComponentX>
    }
    function.def @constrain(%self: !struct.type<@ComponentX>)  { function.return }
  }
}
// -----
module attributes {llzk.lang} {
  struct.def @ComponentY {
    function.def @compute() -> !struct.type<@ComponentY> {
      %self = struct.new : !struct.type<@ComponentY>
      function.return %self : !struct.type<@ComponentY>
    }
    function.def @constrain(%self: !struct.type<@ComponentY>)  {
      // expected-error@+1 {{'struct.new' op only valid within a 'function.def' with 'function.allow_witness' attribute}}
      %0 = struct.new : !struct.type<@ComponentY>
      function.return
    }
  }
}
// -----
module attributes {llzk.lang} {
  struct.def @ComponentZ {
    function.def @compute() -> !struct.type<@ComponentZ> {
      %self = struct.new : !struct.type<@ComponentZ>
      function.return %self : !struct.type<@ComponentZ>
    }
    function.def @constrain(%self: !struct.type<@ComponentZ>)  {
      function.return
    }
    // expected-error@+1 {{'struct.def' op must define either only a non-derived "@product" function, or both non-derived "@compute" and "@constrain" functions; found "@extra"}}
    function.def @extra() { function.return }
  }
}
// -----
module attributes {llzk.main = !struct.type<@Main>, llzk.lang} {
  struct.def @Main {
    // expected-error@+1 {{main entry component "@compute" function parameters must be one of: {!felt.type, !array.type<.. x !felt.type>}}}
    function.def @compute(%0: i1) -> !struct.type<@Main> {
      %self = struct.new : !struct.type<@Main>
      function.return %self : !struct.type<@Main>
    }
    function.def @constrain(%self: !struct.type<@Main>)  {
      function.return
    }
  }
}
// -----
module attributes {llzk.main = !struct.type<@MyMain>, llzk.lang} {
  struct.def @MyMain {
    function.def @compute() -> !struct.type<@MyMain> {
      %self = struct.new : !struct.type<@MyMain>
      function.return %self : !struct.type<@MyMain>
    }
    // expected-error@+1 {{main entry component "@constrain" function parameters must be one of: {!struct.type<@MyMain>, !felt.type, !array.type<.. x !felt.type>}}}
    function.def @constrain(%self: !struct.type<@MyMain>, %0: i1)  {
      function.return
    }
  }
}
// -----
// expected-error@+1 {{"llzk.main" on top-level module must be a concrete 'struct.type' attribute. Found: 12}}
module attributes {llzk.main = 12, llzk.lang} {
  poly.template @TMustBeStruct {
    poly.param @N

    struct.def @MustBeStruct {
      function.def @compute() -> !struct.type<@TMustBeStruct::@MustBeStruct<[@N]>> {
        %self = struct.new : !struct.type<@TMustBeStruct::@MustBeStruct<[@N]>>
        function.return %self : !struct.type<@TMustBeStruct::@MustBeStruct<[@N]>>
      }
      function.def @constrain(%self: !struct.type<@TMustBeStruct::@MustBeStruct<[@N]>>)  {
        function.return
      }
    }
  }
}
// -----
// expected-error@+1 {{"llzk.main" on top-level module must be a concrete 'struct.type' attribute. Found: !felt.type}}
module attributes {llzk.main = !felt.type, llzk.lang} {
  poly.template @TMustBeStruct {
    poly.param @N

    struct.def @MustBeStruct {
      function.def @compute() -> !struct.type<@TMustBeStruct::@MustBeStruct<[@N]>> {
        %self = struct.new : !struct.type<@TMustBeStruct::@MustBeStruct<[@N]>>
        function.return %self : !struct.type<@TMustBeStruct::@MustBeStruct<[@N]>>
      }
      function.def @constrain(%self: !struct.type<@TMustBeStruct::@MustBeStruct<[@N]>>)  {
        function.return
      }
    }
  }
}
// -----
// expected-error@+1 {{"llzk.main" on top-level module must be a concrete 'struct.type' attribute. Found: !struct.type<@TNotAffine::@NotAffine<[affine_map}}
module attributes {llzk.main = !struct.type<@TNotAffine::@NotAffine<[affine_map<(i)->(i)>]>>, llzk.lang} {
  poly.template @TNotAffine {
    poly.param @N

    struct.def @NotAffine {
      function.def @compute() -> !struct.type<@TNotAffine::@NotAffine<[@N]>> {
        %self = struct.new : !struct.type<@TNotAffine::@NotAffine<[@N]>>
        function.return %self : !struct.type<@TNotAffine::@NotAffine<[@N]>>
      }
      function.def @constrain(%self: !struct.type<@TNotAffine::@NotAffine<[@N]>>)  {
        function.return
      }
    }
  }
}
// -----
// expected-error@+1 {{"llzk.main" on top-level module must be a concrete 'struct.type' attribute. Found: !struct.type<@TNotSymbol::@NotSymbol<[@X]>>}}
module attributes {llzk.main = !struct.type<@TNotSymbol::@NotSymbol<[@X]>>, llzk.lang} {
  poly.template @TNotSymbol {
    poly.param @N

    struct.def @NotSymbol {
      function.def @compute() -> !struct.type<@TNotSymbol::@NotSymbol<[@N]>> {
        %self = struct.new : !struct.type<@TNotSymbol::@NotSymbol<[@N]>>
        function.return %self : !struct.type<@TNotSymbol::@NotSymbol<[@N]>>
      }
      function.def @constrain(%self: !struct.type<@TNotSymbol::@NotSymbol<[@N]>>)  {
        function.return
      }
    }
  }
}
// -----
// expected-error@+1 {{"llzk.main" on top-level module must be a concrete 'struct.type' attribute. Found: !struct.type<@TNotVar::@NotVar<[!poly.tvar<@X>]>>}}
module attributes {llzk.main = !struct.type<@TNotVar::@NotVar<[!poly.tvar<@X>]>>, llzk.lang} {
  poly.template @TNotVar {
    poly.param @N

    struct.def @NotVar {
      function.def @compute() -> !struct.type<@TNotVar::@NotVar<[@N]>> {
        %self = struct.new : !struct.type<@TNotVar::@NotVar<[@N]>>
        function.return %self : !struct.type<@TNotVar::@NotVar<[@N]>>
      }
      function.def @constrain(%self: !struct.type<@TNotVar::@NotVar<[@N]>>)  {
        function.return
      }
    }
  }
}
// -----
// expected-error@+1 {{duplicate key 'llzk.main' in dictionary attribute}}
module attributes {llzk.main = !struct.type<@TMultiple::@Multiple<[2]>>, llzk.main = !struct.type<@TMultiple::@Multiple<[3]>>, llzk.lang} {
  poly.template @TMultiple {
    poly.param @N

    struct.def @Multiple {
      function.def @compute() -> !struct.type<@TMultiple::@Multiple<[@N]>> {
        %self = struct.new : !struct.type<@TMultiple::@Multiple<[@N]>>
        function.return %self : !struct.type<@TMultiple::@Multiple<[@N]>>
      }
      function.def @constrain(%self: !struct.type<@TMultiple::@Multiple<[@N]>>)  {
        function.return
      }
    }
  }
}
// -----
module attributes {llzk.lang} {
  struct.def @Main {
    function.def @compute(%0: !felt.type) -> !struct.type<@Main> { // expected-note {{"@compute" function defined here}}
      %self = struct.new : !struct.type<@Main>
      function.return %self : !struct.type<@Main>
    }
    // expected-error@+1 {{expected "@constrain" function argument types (sans the first one) to match "@compute" function argument types}}
    function.def @constrain(%self: !struct.type<@Main>, %0: !felt.type, %1: !felt.type)  {
      function.return
    }
  }
}
// -----
module attributes {llzk.lang} {
  struct.def @Main {
    function.def @compute(%0: !felt.type) -> !struct.type<@Main> { // expected-note {{"@compute" function defined here}}
      %self = struct.new : !struct.type<@Main>
      function.return %self : !struct.type<@Main>
    }
    // expected-error@+1 {{expected "@constrain" function argument types (sans the first one) to match "@compute" function argument types}}
    function.def @constrain(%self: !struct.type<@Main>, %0: !array.type<4 x !felt.type>)  {
      function.return
    }
  }
}
// -----
module attributes {llzk.lang} {
  struct.def @Foo {
    function.def @compute() -> !struct.type<@Foo> {
      %self = struct.new : !struct.type<@Foo>
      function.return %self : !struct.type<@Foo>
    }

    function.def @constrain(%self: !struct.type<@Foo>) {
      function.return
    }

    // expected-error@+1 {{'builtin.module' op invalid operation in 'struct.def'; only 'struct.member' and 'function.def' operations are permitted}}
    builtin.module @InvalidNestedModule {}
  }
}

// -----
module attributes {llzk.lang} {
  struct.def @Foo {
    function.def @compute() -> !struct.type<@Foo> {
      %self = struct.new : !struct.type<@Foo>
      function.return %self : !struct.type<@Foo>
    }

    function.def @constrain(%self: !struct.type<@Foo>) {
      function.return
    }

    // expected-error@+1 {{'struct.def' op expects parent op to be one of 'builtin.module, poly.template'}}
    struct.def @InvalidNestedStruct {
      function.def @compute() {
        %self = struct.new : !struct.type<@InvalidNestedStruct>
        function.return %self : !struct.type<@InvalidNestedStruct>
      }

      function.def @constrain(%self: !struct.type<@InvalidNestedStruct>) {
        function.return
      }
    }
  }
}

// -----
module attributes {llzk.lang} {
  struct.def @InvalidSignalType {
    // expected-error@+1 {{'struct.member' op with type '!string.type' cannot have the signal attribute}}
    struct.member @foo : !string.type {signal}

    function.def @compute() -> !struct.type<@InvalidSignalType> {
      %self = struct.new : !struct.type<@InvalidSignalType>
      function.return %self : !struct.type<@InvalidSignalType>
    }

    function.def @constrain(%self: !struct.type<@InvalidSignalType>) {
      function.return
    }
  }
}

// -----
module attributes {llzk.lang} {
  struct.def @Foo {
    function.def @compute() -> !struct.type<@Foo> {
      %self = struct.new : !struct.type<@Foo>
      function.return %self : !struct.type<@Foo>
    }

    function.def @constrain(%self: !struct.type<@Foo>) {
      function.return
    }
  }

  struct.def @InvalidSignalType {
    // expected-error@+1 {{'struct.member' op with type '!struct.type<@Foo>' cannot have the signal attribute}}
    struct.member @foo : !struct.type<@Foo> {signal}

    function.def @compute() -> !struct.type<@InvalidSignalType> {
      %self = struct.new : !struct.type<@InvalidSignalType>
      function.return %self : !struct.type<@InvalidSignalType>
    }

    function.def @constrain(%self: !struct.type<@InvalidSignalType>) {
      function.return
    }
  }
}

// -----
module attributes {llzk.lang} {
  struct.def @InvalidSignalType {
    // expected-error@+1 {{'struct.member' op with type '!pod.type<[@a: !felt.type, @b: index]>' cannot have the signal attribute}}
    struct.member @foo : !pod.type<[@a: !felt.type, @b: index]> {signal}

    function.def @compute() -> !struct.type<@InvalidSignalType> {
      %self = struct.new : !struct.type<@InvalidSignalType>
      function.return %self : !struct.type<@InvalidSignalType>
    }

    function.def @constrain(%self: !struct.type<@InvalidSignalType>) {
      function.return
    }
  }
}

// -----
module attributes {llzk.lang} {
  struct.def @InvalidSignalType {
    // expected-error@+1 {{'struct.member' op with type '!pod.type<[@a: !array.type<2 x !pod.type<[@b: !felt.type, @c: index]>>]>' cannot have the signal attribute}}
    struct.member @foo : !pod.type<[@a: !array.type<2 x !pod.type<[@b: !felt.type, @c: index]>>]> {signal}

    function.def @compute() -> !struct.type<@InvalidSignalType> {
      %self = struct.new : !struct.type<@InvalidSignalType>
      function.return %self : !struct.type<@InvalidSignalType>
    }

    function.def @constrain(%self: !struct.type<@InvalidSignalType>) {
      function.return
    }
  }
}
